added local storage realm

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,7 +108,9 @@ def enableProguardInReleaseBuilds = false
  * give correct results when using with locales other than en-US.  Note that
  * this variant is about 6MiB larger per architecture than default.
  */
-def jscFlavor = 'org.webkit:android-jsc:+'
+//def jscFlavor = 'org.webkit:android-jsc:+'
+def jscFlavor = 'org.webkit:android-jsc-intl:+'
+def useIntlJsc = true
 
 /**
  * Whether to enable the Hermes VM.
@@ -179,6 +181,7 @@ android {
 }
 
 dependencies {
+    implementation project(':realm')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
