--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.8.1",
     "axios": "^0.19.2",
     "d3-shape": "^1.3.7",
+    "date-fns": "^2.10.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
@@ -20,6 +21,7 @@
     "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.1",
+    "realm": "4.0.0-beta.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
