--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
+    "@react-native-community/toolbar-android": "^0.2.1",
     "axios": "^0.19.2",
     "d3-shape": "^1.3.7",
     "date-fns": "^2.10.0",
@@ -21,7 +22,7 @@
     "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.1",
-    "realm": "4.0.0-beta.0",
+    "realm": "^10.8.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
