--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-community/toolbar-android": "^0.2.1",
     "axios": "^0.19.2",
     "d3-shape": "^1.3.7",
@@ -18,6 +19,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-svg": "^11.0.1",
     "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
