--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-community/toolbar-android": "^0.2.1",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.19.2",
     "d3-shape": "^1.3.7",
     "date-fns": "^2.10.0",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react": "17.0.2",
+    "react-native": "0.66.1",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.8.0",
     "react-native-svg": "^11.0.1",
     "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
