--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-community/toolbar-android": "^0.2.1",
+    "@react-native-firebase/app": "^15.4.0",
+    "@react-native-firebase/auth": "^15.4.0",
+    "@react-native-firebase/firestore": "^15.4.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.19.2",
@@ -26,6 +29,7 @@
     "react-native-screens": "^3.8.0",
     "react-native-svg": "^11.0.1",
     "react-native-svg-charts": "^5.3.0",
+    "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.1",
     "realm": "^10.9.1",
