--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,5 +21,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 MYAPP_UPLOAD_STORE_FILE=arduino-weather.keystore
 MYAPP_UPLOAD_KEY_ALIAS=arduino-weather
-MYAPP_UPLOAD_STORE_PASSWORD=***
-MYAPP_UPLOAD_KEY_PASSWORD=***
+MYAPP_UPLOAD_STORE_PASSWORD=****@****
+MYAPP_UPLOAD_KEY_PASSWORD=****@****
