--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.1",
     "realm": "^10.9.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
