--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/firestore": "^15.4.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.19.2",
     "d3-shape": "^1.3.7",
     "date-fns": "^2.10.0",
